{
    "name": "Input",
    "maps": [
        {
            "name": "DMCamera",
            "id": "c40c47a3-5dde-43a6-8ce0-e241ffd7c5c0",
            "actions": [
                {
                    "name": "MouseRotation",
                    "type": "Value",
                    "id": "19364d5c-821b-40c4-b2ea-5852f25e60e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "90048221-8f26-46d5-a065-18bd334e7563",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "a7a84f93-0d39-4868-8592-33661ea4dc21",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeightNavigation",
                    "type": "Value",
                    "id": "2baf2740-656b-4b21-9a17-22231f13a710",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8872a0cf-86ff-4968-9126-c36c03522d8b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dd759b4-3408-49e0-b734-d488cf99f007",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8e6bf1c-44ee-4567-9a99-6b66d299aba3",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "2d476021-2459-4887-8993-ed22d59c9ab2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeightNavigation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3da89cf8-0573-4920-b039-41440c9377f1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeightNavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ca2b012c-c76b-4dfb-b9a4-d6c9e6f6da8a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeightNavigation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "e7a53904-b5a1-48cf-819c-5c235cb48778",
            "actions": [
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "2600d11c-4402-4957-8248-94ab0d1e1d85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "364c1684-9262-466c-a236-c98d5ed301b3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "aa24eb49-86b0-4c66-a1eb-b974130dbd79",
            "actions": [
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "cd2e0fb0-c221-45d1-ba7f-7c1214e26654",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "41dd678d-83f4-4b67-bed0-dcafbb8642fe",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}